5.4/_sources/module/index.rst.txt
模块手册
########

+-----------------------------------------------+-----------------------------------------------------------------------+
| **主程序/脚本**                               |                                                                       |
+===============================================+=======================================================================+
| :doc:`gmt`                                    | GMT主程序                                                             |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`isogmt`                                 | 在“隔离模式”下运行GMT命令或脚本                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt5syntax`                             | 将旧的GMT4脚本修改成新的 ``gmt <module>`` 语法                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt-config`                             | 返回 GMT 动态函数库的基本信息                                         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtswitch`                          | GMT多版本之间切换                                                     |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **绘图相关模块**                              |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psbasemap`                              | 绘制底图                                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pscoast`                                | 在地图上绘制海岸线、河流、国界线                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psxy`                                   | 在图上绘制线段、多边形和符号                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pstext`                                 | 在图上写文本                                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psscale`                                | 在图上绘制色标                                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pslegend`                               | 绘制图例                                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pshistogram`                            | 统计并绘制直方图                                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psrose`                                 | 绘制极坐标下的直方图（sector图、rose图或windrose图）                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:psxyz`                              | 在3D图上绘制线段、多边形和符号                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psimage`                                | 将EPS或光栅图片放在图上                                               |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pssolar`                                | 计算或/和绘制晨昏线以及民用、航海用以及天文用曙暮光区域               |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psclip`                                 | 打开或关闭多边形裁剪路径                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pssac`                                  | 在地图上绘制 SAC 格式的地震波形数据                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psmeca`                                 | 在地图上绘制震源机制解                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pspolar`                                | 在震源球上绘制台站极性                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psvelo`                                 | 在地图上绘制速度矢量、十字线、楔形图                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`pscoupe`                                | 绘制震源机制解的剖面图                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psternary`                              | 绘制三角图解                                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:psmask`                             | 将没有数据覆盖的区域裁剪或覆盖住                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:pscontour`                          | 使用直接三角化法对数据进行等值线绘制                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:pswiggle`                           | 沿着测线绘制 z = f(x,y) 数据                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/segy/pssegy`            | 在图上绘制SEGY文件                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/segy/pssegyz`           | 在3D图上绘制SEGYZ文件                                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtlogo`                                | 在图上绘制GMT图形logo                                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdvector`                              | 根据两个网格文件绘制矢量场                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdimage`                               | 在图上绘制网格数据                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdcontour`                         | 根据网格文件绘制等值线                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdview`                            | 利用网格文件绘制3D视角图或表面网格图                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **1D 数据处理**                               |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`makecpt`                                | 生成CPT文件                                                           |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtselect`                              | 根据多个准则筛选数据                                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`project`                                | 将数据点投影到线或大圆路径上，生成测线，坐标转换                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtconvert`                         | 表数据格式转换、列提取、列粘贴                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:trend1d`                            | 一维数据的多项式拟合                                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`fitcircle`                              | 拟合球面上数据点的平均位置及圆弧                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtsimplify`                            | 使用Douglas-Peucker算法对线段做简化                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`filter1d`                               | 对1D表数据做时间域滤波                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtconnect`                             | 将端点接近的线段连接起来                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`sample1d`                               | 对1D表数据进行重采样                                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`spectrum1d`                             | 计算一个时间序列的自功率谱，或两个时间序列的互功率谱                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtmath`                            | 对表数据进行数学计算操作                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:mapproject`                         | 地图变化的正变化和逆变换                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtspatial`                         | 线段和多边形的地理空间操作                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtvector`                          | 2D和3D下笛卡尔矢量操作                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmtregress`                         | 1D数据的线性回归                                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **2D 数据处理**                               |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdcut`                                 | 从一个网格文件中裁剪出一个矩形子区域生成新的网格文件                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdpaste`                               | 将两个网格沿着其共同边界拼接成一个文件                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdblend`                               | 将多个部分重叠的网格文件合并成一个网格文件                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdtrack`                           | 获取指定地理位置处的网格值                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdgradient`                        | 计算网格的方向梯度                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdclip`                                | 对网格文件的Z值做裁剪                                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grd2xyz`                                | 将网格文件转换成表数据                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdconvert`                             | 在不同的网格格式之间互相转换                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdedit`                                | 修改网格文件的头段或内容                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdinfo`                                | 从网格文件中提取基本信息                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdraster`                              | 从二进制数据中提取子区域并保存为GMT网格文件                           |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdsample`                              | 对网格文件做重采样                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdlandmask`                            | 根据海岸线数据创建陆地-海洋的mask网格文件                             |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdvolume`                              | 计算网格数据中某个等值线所包围的表面积和体积                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grd2rgb`                                | 将网格文件、原始RGB文件、SUN光栅文件转换成R/G/B三个网格文件           |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdtrend`                               | 拟合网格的趋势面并计算残差                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdproject`                             | 对网格数据做地图变换和逆变换                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdmask`                                | 根据多边形数据或点数据创建mask网格文件                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdmath`                            | 对网格文件做数学计算操作                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdfilter`                          | 对网格文件做空间域或时间域滤波                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdfft`                             | 对网格文件在波数域或频率域做操作                                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdfill`                            | 对网格文件中的无值区域进行插值                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grdhisteq`                          | 对网格做直方图均衡                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:grd2cpt`                            | 根据网格文件的值生成CPT文件                                           |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:blockmean`                          | 使用L2范式对 (x,y,z) 数据做区块平均                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:blockmedian`                        | 使用L1范式对 (x,y,z) 数据做区块平均                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:blockmode`                          | 使用模估计对 (x,y,z) 数据做区块平均                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:surface`                            | 使用可调节张量连续曲率样条插值法对数据进行网格化                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:splitxyz`                           | 将表数据拆分为单独的数据段                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:triangulate`                        | 对表数据做三角剖分和网格化                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:nearneighbor`                       | 使用 "Nearest neighbor" 算法对数据进行网格化                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:trend2d`                            | 二维数据的多项式拟合                                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:greenspline`                        | 使用格林函数样条进行插值                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:sph2grd`                            | 根据球谐系数计算网格                                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:sphdistance`                        | 计算球面上的Voronoi距离、节点或natural nearest-neighbor grid          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:sphinterpolate`                     | 球面上张量数据的球面网格化                                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:sphtriangulate`                     | 球面数据的Delaunay 或 Voronoi 构建                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/misc/dimfilter`         | 在空间域对网格数做方向性滤波                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **参数设置**                                  |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtdefaults`                            | 列出所有GMT参数的当前值                                               |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtset`                                 | 修改单个或多个GMT参数的值                                             |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtget`                                 | 列出单个或多个GMT参数的当前值                                         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **信息提取**                                  |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdinfo`                                | 从网格文件中提取基本信息                                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtinfo`                                | 从表数据中提取信息                                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmtwhich`                               | 返回指定文件的完整路径                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **格式转换**                                  |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`xyz2grd`                                | 将XYZ数据或Z数据转换成网格文件                                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grd2xyz`                                | 将网格文件转换成表数据                                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`kml2gmt`                                | 将Google Earth的KML文件转换为GMT表数据                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:gmt2kml`                            | 将GMT表数据转换为Google Earth的KML文件                                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`grdconvert`                             | 在不同的网格格式之间互相转换                                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`psconvert`                              | 将GMT生成的PS文件转换为其他图片格式                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **mgd77相关模块**                             |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77convert`     | Convert MGD77 data to other file formats                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77header`      | Create MGD77 headers from A77 files                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77info`        | Extract information about MGD77 files                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77list`        | Extract data from MGD77 files                                         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77magref`      | Evaluate the IGRF or CM4 magnetic field models                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77manage`      | Manage the content of MGD77+ files                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77path`        | Return paths to MGD77 cruises and directories                         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77sniffer`     | Along-track quality control of MGD77 cruises                          |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/mgd77/mgd77track`       | Plot track-line map of MGD77 cruises                                  |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **x2sys相关模块**                             |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_binlist`    | Create bin index listing from track data files                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_cross`      | Calculate crossovers between track data files                         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_datalist`   | Extract content of track data files                                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_get`        | Get track listing from track index database                           |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_init`       | Initialize a new x2sys track database                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_list`       | Extract subset from crossover data base                               |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_merge`      | Merge an updated COEs table (smaller) into the main table (bigger)    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_put`        | Update track index database from track bin file                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_report`     | Report statistics from crossover data base                            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/x2sys/x2sys_solve`      | Determine least-squares systematic correction from crossovers         |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **SPOTTER相关模块**                           |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/backtracker`    | Generate forward and backward flowlines and hotspot tracks            |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/gmtpmodeler`    | Evaluate a plate motion model at given locations                      |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/grdpmodeler`    | Evaluate a plate motion model on a geographic grid                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/grdrotater`     | Finite rotation reconstruction of geographic grid                     |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/originator`     | Associate seamounts with nearest hotspot point sources                |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/rotconverter`   | Manipulate total reconstruction and stage rotations                   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/rotsmoother`    | Get mean rotations and covarience from set of finate rotations        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/grdspotter`     | Create CVA image from a gravity or topography grid                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/spotter/hotspotter`     | Create CVA image from seamount locations                              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **POTENTIAL相关模块**                         |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/gmtflexure`   | Compute flexural deformation of 2-D loads, forces and bending moments |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/grdflexure`   | Compute flexural deformation of 3-D surfaces for various rheologies   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/gmtgravmag3d` | Compute the gravity/magnetic anomaly of a 3-D body                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/grdgravmag3d` | Computes the gravity effect of one (or two) grids                     |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/gravfft`      | Compute gravitational attraction of 3-D surfaces and a little more    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/grdredpol`    |  Compute the Continuous Reduction To the Pole, AKA differential RTP   |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/grdseamount`  | Compute synthetic seamount bathymetry                                 |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/gpsgridder`   | Interpolate GPS velocity vectors using Green's functions              |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/talwani2d`    | Compute geopotential anomalies over 2-D bodies                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/potential/talwani3d`    | Compute geopotential anomalies over 3-D bodies                        |
+-----------------------------------------------+-----------------------------------------------------------------------+
| **其他模块**                                  |                                                                       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/segy/segy2grd`          | Converting SEGY data to a GMT grid                                    |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/gshhg/gshhg`            | Extract data tables from binary GSHHS or WDBII data files             |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/img/img2google`         | Create Google Earth KML tiles from bathymetry Mercator img grid       |
+-----------------------------------------------+-----------------------------------------------------------------------+
| :doc:`gmt:supplements/img/img2grd`            | Extract a subset from an img file in Mercator or Geographic format    |
+-----------------------------------------------+-----------------------------------------------------------------------+

.. raw:: latex

   \setcounter{tocdepth}{1}

.. toctree::
   :maxdepth: 1
   :hidden:

   filter1d
   fitcircle
   gmt
   gmt-config
   gmt5syntax
   gmtconnect
   gmtdefaults
   gmtget
   gmtinfo
   gmtlogo
   gmtselect
   gmtset
   gmtsimplify
   gmtwhich
   grd2rgb
   grd2xyz
   grdblend
   grdclip
   grdcut
   grdedit
   grdimage
   grdinfo
   grdlandmask
   grdmask
   grdpaste
   grdproject
   grdraster
   grdconvert
   grdsample
   grdtrack
   grdtrend
   grdvector
   grdvolume
   isogmt
   kml2gmt
   makecpt
   mapproject
   project
   psbasemap
   psclip
   pscoast
   psconvert
   pscoupe
   pshistogram
   psimage
   pslegend
   psmeca
   pspolar
   psrose
   pssac
   psscale
   pssolar
   psternary
   pstext
   psvelo
   psxy
   sample1d
   spectrum1d
   xyz2grd

.. raw:: latex

   \setcounter{tocdepth}{2}
